# AuthService

./: .gitignore  pyproject.toml
app/: config.py  database.py
app/dao/: dao.py
app/users/: dao.py  models.py  schemas.py  service.py  utils.py
protobuf/: auth.proto
